[project]
name = "travel-budget-estimator"
travel-budget = "travel_crew.main:main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
]
