[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["travel_crew/src"]

[tool.hatch.build.targets.wheel]
packages = ["travel_crew"]

[project]
name = "travel-budget-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
travel-budget = "travel_crew.main:main"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]
