[project]
name = "travel_crew"
version = "0.1.0"
description = "travel_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
travel_crew = "travel_crew.main:run"
run_crew = "travel_crew.main:run"
train = "travel_crew.main:train"
replay = "travel_crew.main:replay"
test = "travel_crew.main:test"
run_with_trigger = "travel_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
